// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
  1 | query User {
  2 |   user {
> 3 |     id
    |       ^ Variable "$limit" is not defined by operation "User".
  4 |     ...UserFields
  5 |   }
  6 | }
  7 |
`;

exports[` 2`] = `
  1 | query User {
  2 |   user {
> 3 |     id
    |       ^ Variable "$offset" is not defined by operation "User".
  4 |     ...UserFields
  5 |   }
  6 | }
  7 |
`;
